[package]
name = "collect_array"
version = "0.1.3"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
edition = "2018"
description = "Allows for collecting an Iterator into an exactly sized array."
repository = "https://github.com/illicitonion/collect_array"
readme = "README.md"
keywords = ["array", "iterators"]
categories = ["rust-patterns", "no-std"]
license = "BSD-3-Clause"

[badges]
maintenance = { status = "passively-maintained" }
